# AedsTP3

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/heapsorts/: CMakeLists.txt  heapsort.c  heapsort.h
src/main/: CMakeLists.txt  main.c
src/quicksorts/: CMakeLists.txt  insquick.c  insquick.h  inssort.c  inssort.h  iteintquick.c  iteintquick.h  itequick.c  itequick.h  lista.c  lista.h  medquick.c  medquick.h  pilha.c  pilha.h  recintquick.c  recintquick.h  recquick.c  recquick.h
